refactor(oneself-common): 使用 Java 16 的新特性 toList()
- 移除了对 Collectors.toList() 的依赖
- 简化了代码，提高了可读性